--- a/benchmark.ipynb
+++ b/benchmark.ipynb
@@ -2196,7 +2196,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3.10.8 64-bit (microsoft store)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2210,11 +2210,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.7.8 (tags/v3.7.8:4b47a5b6ba, Jun 28 2020, 08:53:46) [MSC v.1916 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
-    "hash": "3c6113bdeb5a95a65607a002c157748ebadd3b2c56cc564f01a40dfc7026c425"
+    "hash": "0a54084e6b208ee8d1ce3989ffc20924477a5f55f5a43e22e699a6741623861e"
    }
   }
  },
