--- a/KNN.ipynb
+++ b/KNN.ipynb
@@ -14,13 +14,67 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "from PIL import Image\n",
-    "from tqdm import tqdm\n",
+    "# from PIL import Image\n",
+    "# from tqdm import tqdm\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_features_csv = pd.read_csv('features_file_resnet.csv')\n",
+    "train_labels = pd.read_csv(\"train_labels.csv\", index_col=\"id\")\n",
     "\n",
-    "df_iris = pd.read_csv('features_file_resnet.csv')\n",
-    "df_iris.tail()\n"
+    "train_features_csv.tail(n=4)\n",
+    "\n",
+    "species_labels = sorted(train_labels.columns.unique())\n",
+    "species_labels\n",
+    "\n",
+    "small_train_labels = train_features_csv[:, 0]\n",
+    "small_train_labels.tail(n=4)\n",
+    "small_train_features = train_features_csv[:, 1:]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Split into train and evaluation sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "train_features_random = train_features_csv.sample(random_state=1)\n",
+    "y = train_features_random[:, 0]\n",
+    "x = train_features_random[:, 1:]\n",
+    "\n",
+    "# note that we are casting the species labels to an indicator/dummy matrix\n",
+    "x_train, x_eval, y_train, y_eval = train_test_split(\n",
+    "    x, y, stratify=y, test_size=0.25 #TESTAR o stratify\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train.head()\n",
+    "y_train.head()\n",
+    "x_train.shape, y_train.shape, x_eval.shape, y_eval.shape"
    ]
   },
   {
@@ -30,6 +84,13 @@
    "source": [
     "Implement the K-Nearest Neighbors Algorithm"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -39,8 +100,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.7.8 (tags/v3.7.8:4b47a5b6ba, Jun 28 2020, 08:53:46) [MSC v.1916 64 bit (AMD64)]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.8"
   },
   "orig_nbformat": 4,
   "vscode": {
