knn from sklearn

--- a/KNN.ipynb
+++ b/KNN.ipynb
@@ -90,6 +90,86 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#Step-1: Select the number K of the neighbors\n",
+    "K = 5\n",
+    "#Step-2: Calculate the Euclidean distance of K number of neighbors\n",
+    "all_distances = []\n",
+    "knn_distances = []\n",
+    "for sample in x_eval:\n",
+    "    distance = sum((sample-x_train)**2)\n",
+    "    all_distances = (distance)\n",
+    "    knn_distances = sorted(all_distances, reverse=True)\n",
+    "    knn_distances = knn_distances[0:K, :]\n",
+    "\n",
+    "\n",
+    "#Step-3: Take the K nearest neighbors as per the calculated Euclidean distance.\n",
+    "\n",
+    "#Step-4: Among these k neighbors, count the number of the data points in each category.\n",
+    "#Step-5: Assign the new data points to that category for which the number of the neighbor is maximum.\n",
+    "#Step-6: Our model is ready."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sklearn function to KNN\n",
+    "Source: https://scikit-learn.org/stable/auto_examples/neighbors/plot_classification.html#sphx-glr-auto-examples-neighbors-plot-classification-py\n",
+    "\n",
+    "https://www.geeksforgeeks.org/k-nearest-neighbor-algorithm-in-python/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from matplotlib.colors import ListedColormap\n",
+    "from sklearn import neighbors, datasets\n",
+    "from sklearn.inspection import DecisionBoundaryDisplay\n",
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "K = 15\n",
+    "\n",
+    "# import some data to play with\n",
+    "x_train, x_eval, y_train, y_eval\n",
+    "\n",
+    "X = x_train\n",
+    "y = y_train\n",
+    "\n",
+    "for weights in [\"uniform\", \"distance\"]:\n",
+    "    # we create an instance of Neighbours Classifier and fit the data.\n",
+    "    clf = neighbors.KNeighborsClassifier(K, weights=weights)\n",
+    "    clf.fit(X, y)\n",
+    "\n",
+    "# Predict on dataset which model has not seen before\n",
+    "print(clf.predict(x_eval))\n",
+    "\n",
+    "# Calculate the accuracy of the model\n",
+    "print(knn.score(X_test, y_test))\n",
+    "\n",
+    "print(classification_report(y_eval, clf.predict(x_eval),\n",
+    "\ttarget_names=species_labels))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Comparison"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -109,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.7.8 (tags/v3.7.8:4b47a5b6ba, Jun 28 2020, 08:53:46) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
